# EvoGuard

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-a100.txt  requirements.txt
configs/: ablations.yaml  agentdojo_banking_local.yaml  ai2thor.yaml  baselines.yaml  default.yaml  example.yaml  llm.yaml  llm_lora_rl.yaml  llm_lora_sft.yaml  maniskill.yaml  neural_safety.yaml  ppo.yaml  qianfan_remote.yaml  real_qianfan.yaml  real_qianfan_full.yaml  real_qianfan_smoke.yaml  text_tool.yaml
data/: intro.md
docs/: a100_training.md  baselines.md  data_protocol.md  datasets.md  decisions.md  experiments.md  method_design.md  paper_notes.md  risks_and_limitations.md  roadmap.md  writing_plan.md
evoguard/: __init__.py  config.py  controller.py  judge.py  run.py
logs/: mixed_rl_v2.out  self_redteam.out
paper/: draft.tex  experiments.md  intro.md  method.md  outline.md  related_work.md
scripts/: balance_safety_sft_data.py  build_toolsafe_eval_splits.py  build_tracesafe_eval_splits.py  convert_attacks_to_rollouts.py  download_tracesafe.py  evaluate.py  evaluate_llm_safety.py  evaluate_self_redteam.py  export_sample_data.py  generate_attacks.py  generate_final_tables.py  generate_hard_heldout.py  generate_llm_attacks.py  generate_toolsafe_rollouts.py  plot_results.py  prepare_safety_sft_data.py  prepare_self_evolution_data.py  register_vllm_lora.sh  run_ablations.py  run_baselines.py  run_experiment.sh  run_llm_rollout.py  run_online_redteam.py  run_real.sh  run_rollout.py  run_smoke.sh  sample_llm_attacks.py  smoke_test_api_attack.py  start_vllm.sh  (+9 more)
(+250 files in other folders)
