[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "evoguard"
version = "0.1.0"
description = "Self-evolving adversarial risk-aware RL for tool-calling agents."
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
